wip(job): add snapshot mask to job card, #7

--- a/app/assets/styles/_JobPage.scss
+++ b/app/assets/styles/_JobPage.scss
@@ -76,6 +76,19 @@
               }
             }
           }
+
+          .snapshot-form {
+            color: #fff;
+            width: 280px;
+            padding-left: 30px;
+
+            .next-btn {
+              width: 60px;
+              float: right;
+            }
+
+
+          }
         }
 
         .job-card__mask--open {
