--- a/app/assets/styles/_ClassroomGroup.scss
+++ b/app/assets/styles/_ClassroomGroup.scss
@@ -5,6 +5,15 @@
     border-bottom: 1px solid $ailab-secondary;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.28);
     overflow: hidden;
+    .list-view-comp  {
+      .row {
+        margin-bottom: 10px;
+        .list-view-li {
+          height: 40px;
+          margin-bottom: 0px;
+        }
+      }
+    }
   }
 }
 
