--- a/app/assets/styles/_Login.scss
+++ b/app/assets/styles/_Login.scss
@@ -1,5 +1,5 @@
 .login-comp {
-  @include rect-center(640px, 540px);
+  @include rect-center(640px, initial);
   background-color: #ffffff;
   box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.21);
   overflow: hidden;
@@ -26,11 +26,19 @@
     @include rect-center(414px, initial);
     margin-top: 50px;
     margin-bottom: 30px;
-    
+
+    .btn-link {
+      display: inline-block;
+      width: 100%;
+      margin-bottom: 20px;
+      &:hover {
+        text-decoration: none;
+      }
+    }
 
     button {
       outline: none;
-      
+
       img {
         transition: all .2s ease-in-out;
         cursor: pointer;
