--- a/app/assets/styles/_TableList.scss
+++ b/app/assets/styles/_TableList.scss
@@ -26,7 +26,12 @@
         vertical-align: middle;
 
         .action-open-btn {
+          border-radius: 99em;
           cursor: pointer;
+
+          & > svg {
+            transform: translateY(2px);
+          }
         }
 
         .action-open-btn:hover + .action-menu {
@@ -38,6 +43,7 @@
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.26);
           opacity: 0;
           pointer-events: none;
+          z-index: 5;
 
           &:hover {
             opacity: 1;
