--- a/app/assets/styles/_FormGroups.scss
+++ b/app/assets/styles/_FormGroups.scss
@@ -74,7 +74,8 @@ $form-group-row-margin: 20px;
 	}
 
 	.form-toggle {
-		height: 110px;
+		overflow: hidden;
+		min-height: 110px;
 	}
 
 	.toggle-main-input, .toggle-sub-input {
