refactor(course): modify wording of access type in container course

--- a/app/assets/styles/_FormGroups.scss
+++ b/app/assets/styles/_FormGroups.scss
@@ -57,6 +57,10 @@ $form-group-row-margin: 20px;
 		}
 	}
 
+	.input-access-type {
+		width: initial;
+	}
+
 	.md-editor-comp {
 		overflow: hidden;
 		min-height: 160px;
